# p2p-auction

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml  guide  idea  test
config/: boot1  node1  node2  node3  node4
docs/: outline
proto/: node.proto
src/: artificial_behaviour.rs  behaviour.rs  blockchain.rs  boot.rs  config.rs  gossip.rs  kad.rs  key.rs  lib.rs  main.rs  node.rs  poisson.rs  rpc.rs  runtime.rs  state.rs  time.rs  topic.rs  vm.rs
src/bot/: byzantine.rs  double_spend.rs  eclipse.rs  flood.rs  forge.rs  honest.rs  mod.rs  nonce_skip.rs  overbid.rs  past_auction.rs  replay.rs  sybil.rs
