[package]
name = "p2p-auction"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
clap = "4.6.0"
libp2p = { version = "0.56.0", features = [
  "tokio",
  "tcp",
  "dns",
  "noise",
  "yamux",
  "kad",
  "ping",
  "identify",
  "macros",
] }
libp2p-gossipsub = "0.49.4"
serde = {version="1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.17"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
