[package]
name = "p2p-auction"
version = "0.1.0"
edition = "2024"

[dependencies]

# async
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.17"

# command-line
clap = {version = "4.6.0", features = ["derive"]}
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

# crypto
hex = "0.4.3"
blake2 = "0.10.6"
ed25519-dalek-blake2b = "1.0.2"

# net
libp2p = { version = "0.56.0", features = [
  "tokio",
  "tcp",
  "dns",
  "noise",
  "yamux",
  "kad",
  "ping",
  "identify",
  "macros",
] }
libp2p-gossipsub = "0.49.4"

# serialization
serde = {version="1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rand = { version = "0.8", features = ["std"] }
